# SnippetsHolder2

./: CMakeLists.txt  MainWidget.cpp  MainWidget.h  MainWidget.ui  README.md  main.cpp
DataModel/: SettingsDesc.h  SnippetDesc.h  SnippetsHolderDesc.h  SnippetsHolderModel.h  SnippetsTabDesc.h
Helpers/: JsonFile.cpp  JsonFile.h  MouseWatcher.cpp  MouseWatcher.h  TabEditorWatcher.cpp  TabEditorWatcher.h
Managers/: SnippetsManager.cpp  SnippetsManager.h  qserializer.h
Types/: SingletonSharedPtrHolder.h
